<resources>
    <string name="app_name">HotelPlayaParadise_AppMovil</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="today_s">Today\'s</string>
    <string name="check_in">Check-In</string>
    <string name="_23">23</string>
    <string name="today_s1">Today\'s</string>
    <string name="check_out">Check-Out</string>
    <string name="_13">13</string>
    <string name="total">Total</string>
    <string name="in_hotel">In Hotel</string>
    <string name="_60">60</string>
    <string name="total2">Total</string>
    <string name="available_room">Available room</string>
    <string name="_10">10</string>
    <string name="room_status">Room Status</string>
    <string name="occupied_rooms">Occupied Rooms</string>
    <string name="clean">Clean</string>
    <string name="dirty">Dirty</string>
    <string name="inspected">Inspected</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="dashboard_detalles_hotel">DashBoard detalles Hotel</string>
    <string name="overview">Overview</string>
    <string name="show_day">Show: Day</string>
    <string name="rooms">Rooms</string>
    <string name="floor_status">Floor Status</string>
    <string name="customers_feedback">Customers FeedBack</string>
    <string name="_104">104</string>
    <string name="room_cleaning_could_be_better_a203">Room cleaning could be better A203</string>
    <string name="cristian">Cristian</string>
    <string name="food_could_be_better_a201">Food could be better A201</string>
=======
    <string name="topnar">topnar</string>
    <string name="wordmenu">WordMenu</string>
    <string name="principalmenu">PrincipalMenu</string>
    <string name="footer">footer</string>
    <string name="growpercent">growpercent</string>
    <string name="graph16">graph16</string>
    <string name="graph13">graph13</string>
    <string name="footer2">footer</string>
    <string name="saleperformance">SalePerformance</string>
    <string name="overview">Overview</string>
    <string name="title_activity_drawer_menu">Drawer_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

>>>>>>> feat/add-Principal_Menu
=======
    <string name="growpercent">growpercent</string>
    <string name="topappbar">topappbar</string>
    <string name="grpah16">grpah16</string>
    <string name="graph13">graph13</string>
    <string name="footer_topbar">footer_topbar</string>
    <string name="menuimagebutton">menuimagebutton</string>
    <string name="bienvendio_a_n_paradise">Bienvendio a\n Paradise</string>
    <string name="ofreciendo_a_sus_hu_spedes_n_una_experiencia_de_n_vacaciones_inolvidable">Ofreciendo a sus huéspedes\n una experiencia de\n vacaciones inolvidable.</string>
    <string name="comenzar">Comenzar</string>
    >>>>>>> feature/Dashboard_Grow_Indicator
</resources>