<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal_Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <!-- Top App Bar (Representa la barra superior) -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/topnar"
            android:scaleType="centerCrop"
            android:src="@drawable/top_app_bar" />

        <!-- Menu (Representa el menú principal con opciones como en la imagen) -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wordmenu"
            android:scaleType="fitXY"
            android:src="@drawable/menu"
            android:layout_marginTop="30dp"
            android:layout_marginStart="62dp"/>


        <!-- Principal Menu (El contenido principal con ítems del menú como Dashboard, Catalogue, etc.) -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/principalmenu"
            android:scaleType="centerInside"
            android:src="@drawable/principalmenu"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <!-- Footer (Representa la barra inferior con iconos de navegación) -->
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/footer"
            android:scaleType="centerCrop"
            android:src="@drawable/footer" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>