<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotelplayaparadise_appmovil.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hotelplayaparadise_appmovil.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hotelplayaparadise_appmovil.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/consulta1"
        android:name="com.example.hotelplayaparadise_appmovil.Consulta1"
        android:label="fragment_consulta1"
        tools:layout="@layout/fragment_consulta1" />
    <fragment
        android:id="@+id/consulta2"
        android:name="com.example.hotelplayaparadise_appmovil.Consulta2"
        android:label="fragment_consulta2"
        tools:layout="@layout/fragment_consulta2" />
    <fragment
        android:id="@+id/consulta3"
        android:name="com.example.hotelplayaparadise_appmovil.Consulta3"
        android:label="fragment_consulta3"
        tools:layout="@layout/fragment_consulta3" />
</navigation>