<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@drawable/pantalla_carga"
    >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="226dp"
        android:layout_height="74dp"
        android:text="@string/bienvendio_a_n_paradise"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="198dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="285dp"
        android:layout_height="74dp"
        android:text="@string/ofreciendo_a_sus_hu_spedes_n_una_experiencia_de_n_vacaciones_inolvidable"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="328dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="261dp"
        android:layout_height="61dp"
        android:text="@string/comenzar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="#238C98"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="576dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>